<resources>
    <string name="app_name">KERKAR</string>
    
    <string name="home">ホーム</string>
    <string name="timetable">時間割</string>
    <string name="assignment">課題</string>
    <string name="submitted_assignment">提出済課題</string>
    <string name="unsubmitted_assignment">未提出課題</string>
    <string name="setting">設定</string>
    <string name="logout">ログアウト</string>
    
    <string name="assignment_to_date">今日までの課題</string>
    <string name="class_infomation">休校情報</string>
    <string name="school_infomation">大学からのお知らせ</string>
    <string name="timetable_to_day">今日の授業</string>

    <string name="monday">月</string>
    <string name="tuesday">火</string>
    <string name="wednesday">水</string>
    <string name="thursday">木</string>
    <string name="friday">金</string>
    <string name="saturday">土</string>

    <string name="first_period">1限</string>
    <string name="second_period">2限</string>
    <string name="third_period">3限</string>
    <string name="fourth_period">4限</string>
    <string name="fifth_period">5限</string>
    <string name="sixth_period">6限</string>

    <string name="nav_open">Navigation Drawer Open</string>
    <string name="nav_close">Navigation Drawer Close</string>

    <string name="e_mail">メールアドレス</string>
    <string name="password">パスワード</string>
    <string name="college_name">大学名 ※あとで変更できます</string>
    <string name="alredy_have_account">すでにアカウントを持っている</string>
    <string name="create_account">アカウントを作る</string>
    <string name="not_login_and_register">ログインせずに使う</string>
    <string name="register">アカウントを作成</string>
    <string name="login">ログイン</string>

    <string name="enter_university">確定</string>
    <string name="create_university">大学を追加</string>
    <string name="add_university_to_account">入学している大学を選択してください</string>

    <string name="add">追加</string>







</resources>